Fixed layout on mobile

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -75,7 +75,7 @@ svg {
 }
 
 .results-articles {
-  margin: 0 auto -7rem;
+  margin: 0 auto -4rem;
 }
 
 .results-entry {
